--- a/AcademiaDoZe.Presentation.AppMaui/AppShell.xaml
+++ b/AcademiaDoZe.Presentation.AppMaui/AppShell.xaml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!-- Roberto Antunes Souza -->
 <Shell
-x:Class="AcademiaDoZe.Presentation.AppMaui.AppShell"
-xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-xmlns:views="clr-namespace:AcademiaDoZe.Presentation.AppMaui.Views"
-Title="Academia do Zé">
-    <!--
-<ShellContentTitle="Home" ContentTemplate="{DataTemplate views:MainPage}" Route="MainPage" />
--->
+    x:Class="AcademiaDoZe.Presentation.AppMaui.AppShell"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:AcademiaDoZe.Presentation.AppMaui.Views"
+    Title="Academia do Zé">
+
     <FlyoutItem Title="Dashboard">
-        <ShellContent ContentTemplate="{DataTemplate views:DashboardListPage}" Route="dashboard" />
+        <FlyoutItem.Icon>
+            <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe871;" />
+            <!-- dashboard -->
+        </FlyoutItem.Icon>
+        <ShellContent 
+            ContentTemplate="{DataTemplate views:DashboardListPage}" 
+            Route="dashboard" />
     </FlyoutItem>
+
     <FlyoutItem Title="Logradouros">
-        <ShellContent ContentTemplate="{DataTemplate views:LogradouroListPage}" Route="logradouros" />
+        <FlyoutItem.Icon>
+            <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe7f1;" />
+            <!-- location_city -->
+        </FlyoutItem.Icon>
+        <ShellContent 
+            ContentTemplate="{DataTemplate views:LogradouroListPage}"
+            Route="logradouros" />
     </FlyoutItem>
-    <!--
-<TabBar>
-<ShellContent Title="Dashboard" ContentTemplate="{DataTemplate views:DashboardListPage}" Route="dashboard" />
-<ShellContent Title="Logradouros" ContentTemplate="{DataTemplate views:LogradouroListPage}" Route="logradouros" />
-</TabBar>
--->
+
+    <FlyoutItem Title="Configurações">
+        <FlyoutItem.Icon>
+            <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe8b8;" />
+            <!-- settings -->
+        </FlyoutItem.Icon>
+        <ShellContent 
+            ContentTemplate="{DataTemplate views:ConfigPage}" 
+            Route="configuracoes"/>
+    </FlyoutItem>
+
 </Shell>
