--- a/AcademiaDoZe.Presentation.AppMaui/Views/ConfigPage.xaml
+++ b/AcademiaDoZe.Presentation.AppMaui/Views/ConfigPage.xaml
@@ -59,31 +59,31 @@
                     <Grid ColumnDefinitions="*" ColumnSpacing="10">
                         <StackLayout Spacing="5" Grid.Column="0">
                             <Label Text="Tipo"/>
-                            <Picker x:Name="DatabaseTypePicker"/>
+                            <Picker x:Name="DatabaseTypePicker" SelectedIndexChanged="OnEntryCompleted"/>
                         </StackLayout>
                     </Grid>
 
                     <Grid ColumnDefinitions="*,*" ColumnSpacing="10">
                         <StackLayout Spacing="5" Grid.Column="0">
                             <Label Text="Servidor"/>
-                            <Entry x:Name="ServidorEntry" Placeholder="Digite o servidor..."/>
+                            <Entry x:Name="ServidorEntry" Placeholder="Digite o servidor..." Completed="OnEntryCompleted"/>
                         </StackLayout>
 
                         <StackLayout Spacing="5" Grid.Column="1">
                             <Label Text="Banco"/>
-                            <Entry x:Name="BancoEntry" Placeholder="Digite o nome do banco..."/>
+                            <Entry x:Name="BancoEntry" Placeholder="Digite o nome do banco..." Completed="OnEntryCompleted"/>
                         </StackLayout>
                     </Grid>
 
                     <Grid ColumnDefinitions="*,*" ColumnSpacing="10">
                         <StackLayout Spacing="5" Grid.Column="0">
                             <Label Text="Usuário"/>
-                            <Entry x:Name="UsuarioEntry" Placeholder="Digite o usuário..."/>
+                            <Entry x:Name="UsuarioEntry" Placeholder="Digite o usuário..." Completed="OnEntryCompleted"/>
                         </StackLayout>
 
                         <StackLayout Spacing="5" Grid.Column="1">
                             <Label Text="Senha"/>
-                            <Entry x:Name="SenhaEntry" Placeholder="Digite a senha..." IsPassword="True"/>
+                            <Entry x:Name="SenhaEntry" Placeholder="Digite a senha..." IsPassword="True" Completed="OnEntryCompleted"/>
                         </StackLayout>
                     </Grid>
 
@@ -92,7 +92,7 @@
                             <Label FontFamily="MaterialIcons" Text="&#xe429;" Style="{StaticResource SubHeadline}" />
                             <Label Text="Complemento" Style="{StaticResource SubHeadline}" />
                         </StackLayout>
-                        <Entry x:Name="ComplementoEntry" Placeholder="Digite o complemento..."/>
+                        <Entry x:Name="ComplementoEntry" Placeholder="Digite o complemento..." Completed="OnEntryCompleted"/>
                     </StackLayout>
 
                     <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Margin="15,10">
