--- a/AcademiaDoZe.Presentation.AppMaui/AppShell.xaml
+++ b/AcademiaDoZe.Presentation.AppMaui/AppShell.xaml
@@ -40,6 +40,17 @@
             Route="colaboradores" />
     </FlyoutItem>
 
+    <FlyoutItem Title="Alunos">
+        <FlyoutItem.Icon>
+            <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe80c;" 
+                         Color="{AppThemeBinding Light=Black, Dark=White}" />
+            <!-- group -->
+        </FlyoutItem.Icon>
+        <ShellContent 
+        ContentTemplate="{DataTemplate views:AlunoListPage}" 
+        Route="alunos" />
+    </FlyoutItem>
+
     <FlyoutItem Title="Configurações">
         <FlyoutItem.Icon>
             <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe8b8;" 
