--- a/AcademiaDoZe.Presentation.AppMaui/AppShell.xaml
+++ b/AcademiaDoZe.Presentation.AppMaui/AppShell.xaml
@@ -29,6 +29,16 @@
             Route="logradouros" />
     </FlyoutItem>
 
+    <FlyoutItem Title="Matrículas">
+        <FlyoutItem.Icon>
+            <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe85d;" 
+                     Color="{AppThemeBinding Light=Black, Dark=White}" />
+        </FlyoutItem.Icon>
+        <ShellContent 
+            ContentTemplate="{DataTemplate views:MatriculaListPage}" 
+                      Route="matriculas"/>
+    </FlyoutItem>
+
     <FlyoutItem Title="Colaboradores">
         <FlyoutItem.Icon>
             <FontImageSource FontFamily="MaterialIcons" Glyph="&#xea67;" 
